<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button_scroll_flag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_scroll_behavior"
        app:layout_constraintBottom_toTopOf="@+id/button_sticky_bottom"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_sticky_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_sticky_bottom"
        app:layout_constraintBottom_toTopOf="@+id/button_weird_sticky"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_scroll_flag" />

    <Button
        android:id="@+id/button_weird_sticky"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_weird_sticky_bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_sticky_bottom" />

</android.support.constraint.ConstraintLayout>